# CVBot

./: .dockerignore  .env.example  .gitignore  README.md  postgres.conf  pyproject.toml
deployment/: .env.example  Dockerfile  docker-compose.yaml
deployment/chroma/: config.yaml
deployment/nginx/: nginx.conf
docs/: kaloyan.basic-info.md  kaloyan.education.md  kaloyan.projects-summary.md
migrations/cvbot/: 0_20250831140838_init.py  1_20250831141722_add_default_role.py  2_20250914113605_update.py
scripts/: generate_collection.py
src/: config.py  lifespan.py  main.py
src/agents/chatbot/: agent.py  nodes.py  state.py  tools.py
src/agents/common/nodes/: CustomToolNode.py
src/models/: app_state.py
src/models/agent/: agent_source.py  custom_tool_response.py  suggestion_llm_output.py
src/models/body/: chatbot.py  clerk.py  vector_store.py
src/models/db/: __init__.py  message_sources.py  profiles.py  projects.py
src/models/errors/: text_splitter.py
src/models/i18n/: supported_languages.py
src/models/responses/: generic.py
src/models/services/: chunks_enricher.py  document_parser.py  mailer.py  text_splitter.py  vector_store.py
src/prompts/: chatbot_prompt.py  chunks_enricher_prompt.py  markdown_chunker_prompt.py  suggestions_llm_prompt.py
src/routes/chatbot/: chatbot_routes.py
src/routes/dependencies/: locale_parser.py  protect.py  rate_limit.py
src/routes/projects/: projects_routes.py
src/routes/vector_store/: vector_store_routes.py
src/routes/versions/: v1_routes.py
src/routes/webhooks/: clerk.py
src/utils/: message_to_role.py
(+3 files in other folders)
